--- a/src/i18n/locales/el.json
+++ b/src/i18n/locales/el.json
@@ -10,7 +10,8 @@
     "error": "Σφάλμα",
     "success": "Επιτυχία",
     "edit": "Επεξεργασία",
-    "all": "Όλα"
+    "all": "Όλα",
+    "all_cities": "Όλες οι πόλεις"
   },
   "map": {
     "locate_me": "Βρες την τοποθεσία μου",
