--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -10,7 +10,8 @@
     "error": "Error",
     "success": "Success",
     "edit": "Edit",
-    "all": "All"
+    "all": "All",
+    "all_cities": "All Cities"
   },
   "map": {
     "locate_me": "Find My Location",
